# oee-dashboard

./: README.md  app.py  explore.py  generate_data.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: downtime_events.csv  production.csv
src/oee_dashboard/: __init__.py  metrics.py  reporter.py
tests/: test_metrics.py
