[project]
name = "oee-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mariano Vera Causich", email = "95258268+MarianoVera22@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "plotly>=6.8.0",
    "polars>=1.41.2",
    "streamlit>=1.58.0",
    "xlsxwriter>=3.2.9",
]

[project.scripts]
oee-dashboard = "oee_dashboard:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["plotly.*", "xlsxwriter.*"]
ignore_missing_imports = true
